correction h3 version tablette et desk

--- a/compiled/desktop.css
+++ b/compiled/desktop.css
@@ -150,7 +150,7 @@
   }
 
   .menuBox:active h3 {
-    width: 60%;
+    width: 65%;
   }
 
   .menuBox:active .checkAnimation {
