--- a/compiled/tablet.css
+++ b/compiled/tablet.css
@@ -77,7 +77,7 @@
     }
 
     .menuBox:active h3 {
-        width: 70%;
+        width: 77%;
     }
 
     .menuBox:active .price {
